# mypodcast

./: pyproject.toml  start_venv.bat
app/: main.py
app/exceptions/: podcast_exceptions.py
app/models/: podcast.py
app/routes/: podcast.py
app/services/: audio_maker.py  namuwiki_data_extract.py  namuwiki_scrape.py  podcast_maker.py  script_maker.py
app/templates/: podcast.html
my_podcast/: .env.example  .firebaserc  .gitignore  firestore.rules  package-lock.json  package.json  plan.md  tailwind.config.js  vercel.json
my_podcast/api/: submit-waitlist.js
my_podcast/frontend/api/: submit-waitlist.js
my_podcast/frontend/src/pages/: SignUpPage.tsx  WaitlistSignupPage.tsx
my_podcast/frontend/src/services/: waitlist.ts
my_podcast/public/: index.html
my_podcast/src/: App.tsx
my_podcast/src/components/: FeatureCard.tsx  Footer.tsx  Header.tsx
my_podcast/src/firebase/: config.ts
my_podcast/src/pages/: CustomizationPage.tsx  LandingPage.tsx  PodcastSelectionPage.tsx  WaitlistSignupPage.tsx
my_podcast/src/services/: waitlist.ts
my_podcast/src/utils/: constants.ts
