[tool.poetry]
name = "mypodcast"
version = "1"
description = "mypodcast mvp"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
gtts = "^2.5.4"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
